fixed css on ie(s)

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -69,6 +69,8 @@
 
 
 
+
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -439,7 +441,7 @@ input#applyButton {
 .popover div#feedback p.thanks {
   position: relative;
   top: 90px;
-  left: 0;
+  left: 8px;
   max-width: 450px;
   margin-bottom: 50px;
   color: #666;
@@ -585,11 +587,11 @@ input#applyButton {
  ***********************************************/
 .popover div#request {
   position: relative;
-  width: 620px;
+  width: 640px;
   height: auto;
   top: 98px;
   left: 50%;
-  margin: 0 0 0 -310px;
+  margin: 0 0 0 -320px;
   background: #ffffff;
   padding: 0 0 100px 0;
   border: 1px solid #f8f8f5;
@@ -598,7 +600,7 @@ input#applyButton {
 .popover div#request img.requestClose {
   position: absolute;
   top: -1px;
-  left: 601px;
+  left: 621px;
   z-index:1000;
   cursor: pointer;
 }
@@ -644,7 +646,7 @@ input#applyButton {
   width: 31em;
   height: 1em;
   margin: 0;
-  padding: 10px 40px;
+  padding: 10px 50px;
   background: #f8f8f5;
   border: 1px solid #f0f0f0;
 }
