--- a/app/assets/stylesheets/ie7.css
+++ b/app/assets/stylesheets/ie7.css
@@ -36,7 +36,7 @@ body {
 }             
 
 .popover div#request img.requestClose {
-  left: 601px;
+  left: 621px;
 }
 
 .popover div#request div.detail h4.title {
@@ -81,8 +81,10 @@ body {
   left: 0;
 }              
 
- .popover div#request div.detail form.request fieldset strong {
-  margin: -5px 0 0 10px;
+.popover div#request div.detail form.request fieldset strong {
+  position: relative;
+  top: -15px;
+  left: 10px;
 }
 
 .topLeft {
