--- a/app/assets/stylesheets/ie8.css
+++ b/app/assets/stylesheets/ie8.css
@@ -30,7 +30,7 @@ body {
 }
 
 .popover div#request img.requestClose {
-  left: 601px;
+  left: 621px;
 }
 
 .popover div#request div.detail form.request fieldset label.nickname {
